#
#  Copyright (C) 2025 The Android Open Source Project
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
load("//:build_variables.bzl", "COPTS")
load("//tools/lint:linters.bzl", "clang_tidy_test")

package(
    default_visibility = ["//:android_cuttlefish"],
)

cc_library(
    name = "use_16k",
    srcs = ["use_16k.cc"],
    hdrs = ["use_16k.h"],
    copts = COPTS,
    strip_include_prefix = "//cuttlefish",
    deps = [
        "@gflags",
    ],
)

clang_tidy_test(
    name = "use_16k_clang_tidy",
    srcs = [":use_16k"],
    tags = ["clang_tidy", "clang-tidy"],
)
